<resources>
    <string name="app_name">AndroidFinalProject</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="personCD">Person Icon</string>
    <string name="lockCD">Lock Icon</string>
    <string name="quickChatCD">QuickChat Logo</string>

</resources>