<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userTIL"
        android:layout_width="222dp"
        android:layout_height="82dp"
        android:hint="@string/Username"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.624"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userET"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="49dp"
        android:layout_height="54dp"
        android:contentDescription="@string/personCD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/userTIL"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        app:srcCompat="@drawable/person_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="222dp"
        android:layout_height="82dp"
        android:hint="@string/Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.624"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTIL"
        app:layout_constraintVertical_bias="0.128">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="49dp"
        android:layout_height="54dp"
        android:contentDescription="@string/lockCD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/passwordTIL"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.174"
        app:srcCompat="@drawable/lock_icon" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTIL"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/createAccBtn"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.077" />

    <ImageView
        android:id="@+id/chatImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/quickChatCD"
        android:src="@drawable/chat_logo2"
        app:layout_constraintBottom_toTopOf="@+id/userTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>