<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userTIL"
        android:layout_width="222dp"
        android:layout_height="82dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="325dp"
        android:hint="@string/Username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userET"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="49dp"
        android:layout_height="54dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="338dp"
        android:layout_marginBottom="339dp"
        android:contentDescription="@string/personCD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="222dp"
        android:layout_height="82dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="469dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="180dp"
        android:hint="@string/Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="49dp"
        android:layout_height="54dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="483dp"
        android:layout_marginBottom="194dp"
        android:contentDescription="@string/lockCD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lock_icon" />

    <Button
        android:id="@+id/createAccBtn"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="597dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="86dp"
        android:text="CREATE ACCOUNT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/chatImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="589dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/quickChatCD"
        android:src="@drawable/chat_logo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="47dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="221dp"
        android:layout_marginBottom="460dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userEmail"
        android:layout_width="222dp"
        android:layout_height="82dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="449dp"
        android:hint="Email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>